Fix zoom out End not showing

--- a/src/styles/components/_end.scss
+++ b/src/styles/components/_end.scss
@@ -8,6 +8,7 @@
   flex-direction: column;
   text-align: center;
   transition: opacity 1s;
+  background: white;
 }
 
 .end-container {
